# reversi_exp

./: .gitignore  CMakeLists.txt  Makefile
conf/: example_launch.json
genetics/: CMakeLists.txt  genetics.h  genotype.cpp  genotype.h  merge_processor.h  mutation_processor.h
gothello/: CMakeLists.txt  elo.cpp  elo.h  gothello.cpp  gothello.h  player.h  rsf.cpp  rsf.h  scoring.h  sigsegv.cpp  sigsegv.h  strategy.h  tournament.cpp  tournament.h
reversi/: CMakeLists.txt  Makefile  field.cpp  field.h  game.h  game_controller.h
reversi-cl/: CMakeLists.txt  Makefile  reversi-cl.cpp
reversi/player/: player.h
reversigp/: CMakeLists.txt  reversigp.cpp
rgpsite/: db.sqlite3  manage.py
rgpsite/rgpmon/: apps.py  dbload.py  models.py  progress_graph.py  urls.py  views.py
rgpsite/rgpmon/migrations/: 0001_initial.py
rgpsite/rgpmon/static/rgpmon/: style.css
rgpsite/rgpmon/templates/rgpmon/: alivers.html  player.html  player_list.html
rgpsite/rgpsite/: settings.py  urls.py  wsgi.py
strategy/: CMakeLists.txt  best_scoring.h  random.cpp  random.h  scorings.cpp  scorings.h
test/: CMakeLists.txt  test_genotype.cpp  test_genotype_to_phenotype_conversions.cpp  test_rsf.cpp
